fixing hamburger menu and background shape from covering page header on mobile devices

--- a/assets/scss/_responsiveness.scss
+++ b/assets/scss/_responsiveness.scss
@@ -90,6 +90,10 @@
     padding-left: 0;
     padding-right: 0;
   }
+  .site-title,
+  header h1 {
+    margin-top: 60px;
+  }
 
   /* iframe-wrapper FULL WIDTH FIX */
   .iframe-wrapper,
@@ -221,6 +225,7 @@
   .site-title,
   header h1 {
     font-size: 2.2rem;
+    margin-top: 60px;
   }
   .player-header {
     font-size: 1.6rem;
